--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{article}  
 \usepackage{url}
 \usepackage{hyperref}
+\usepackage{multirow}
 \title{Supplementary material}
 \author{}
 \date{}
@@ -211,7 +212,7 @@ around with the platform using several variables at the same time, things become
 tricky to interpret. For example, in Vancouver, things seem to change
 dramatically from all green to all orange. This is highlighted by the graph of
 trajectories in which the population involved in each cluster is nested in
-colours. Once one gets into the data, the changes don’t look so sharp after all
+colours. Once one gets into the data, the changes don't look so sharp after all
 (maybe in education and income). This may not be a problem of the platform as it
 is, but there may be a warning regarding that the “severity” of changes is not
 necessarily the same across cities. 
@@ -364,6 +365,25 @@ put together. Great job and thanks for sharing this with me!! Please keep me
 updated as you develop it further. I could definitely see a use for it in the
 work I do both in my personal research and at my work at 2M.
 
+
+
+\clearpage
+\section{Data samples}
+\subsection{Canada}
+Data for one CT over time in Toronto.
+\begin{center}
+  \includegraphics[width=\linewidth]{SampleCA.png}
+  \input{tableCA}
+  \end{center}   
+
+\clearpage
+
+\subsection{USA}
+Data for one CT over time in Brooklyn.
+\begin{center}
+  \includegraphics[width=\linewidth]{SampleUS.png}
+  \input{tableUS}
+\end{center} 
 
 \end{document}
 
