online documenttion included

--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -2,6 +2,8 @@
 \usepackage{url}
 \usepackage{hyperref}
 \usepackage{multirow}
+\usepackage[final]{pdfpages}
+
 \title{Supplementary material}
 \author{}
 \date{}
@@ -105,6 +107,8 @@ feedback is welcome.
 % addition, if you know of others who might be interested and willing to provide
 % feedback, please feel free to forward this message to them.
 
+\subsection{Documentation}
+\includepdf[pages=-,pagecommand={},width=1.5\textwidth]{Documentation.pdf}
 
 \subsection{A - Cary Wu}
 %\href{https://soci.ubc.ca/persons/cary-wu/}{\url{https://soci.ubc.ca/persons/cary-wu/}}
