--- a/sup/sup.tex
+++ b/sup/sup.tex
@@ -51,10 +51,7 @@
 \maketitle
 
 
-\section{Expert comments}
-
-
-\subsection{Original request}
+\section{Original request for feedback}
 As part of our efforts in the Urban Genome Project of the University of Toronto,
 we are trying to build infrastructure to help understand recurrent and
 distinctive patterns of urban change.
@@ -107,9 +104,11 @@ feedback is welcome.
 % addition, if you know of others who might be interested and willing to provide
 % feedback, please feel free to forward this message to them.
 
-\subsection{Documentation}
+\section{Documentation}
 \includepdf[pages=-,pagecommand={},width=1.5\textwidth]{Documentation.pdf}
 
+
+\section{Expert comments}
 \subsection{A - Cary Wu}
 %\href{https://soci.ubc.ca/persons/cary-wu/}{\url{https://soci.ubc.ca/persons/cary-wu/}}
 \emph{Doctoral candidate in Sociology at the University of British Columbia, Canada.}
@@ -389,7 +388,7 @@ Data for one CT over time in Brooklyn.
   \input{tableUS}
 \end{center} 
 
-\end{document}
+% \end{document}
 
 \clearpage
 \section{Variable matching} 
