--- a/paper/study.tex
+++ b/paper/study.tex
@@ -267,12 +267,17 @@ of all the regions accessible in this prototype.
 
 
 \section{Expert feedback}
-%This could be a big step toward better understanding of evolving urban morphology.
-To assess the proposed method, we contacted academic and industry experts in
-sociology and urban sciences. We focused our inquires on the utility of the
-prototype, and if they found anything interesting on the data using it. The
-supplementary material contains the communication with five experts, verbatim,
-identified from A to E. 
+We contacted academic and industry experts in sociology and urban sciences for
+their appreciation of our methodology. They had access to the prototype tool, a
+descriptive documentation of the features (included in the supplementary
+material), and a sequence of documentation videos illustrating how to perform
+specific tasks. The documentation explains which datasets are used, how the data
+is represented and processed, including that there is no geographic
+harmonization. We focused our inquires on the results obtained, asking if they
+found anything interesting on the data. The message sent and their full response
+is included in the supplementary material. Each of the five experts is
+identified by a letter, from A to E. 
+
 
 
 Their overall response was positive,  mentioning that the prototype allows them
