--- a/paper/main.tex
+++ b/paper/main.tex
@@ -177,8 +177,8 @@
 \DeclareMathOperator*{\median}{\ensuremath{\text{median}}}
   
 
-\usepackage[switch]{lineno}
-\linenumbers
+% \usepackage[switch]{lineno}
+% \linenumbers
 
 
 \begin{document}
